# PERRY

./: .gitignore
app/libraries/graphic/glut/: CMakeLists.txt  glut.cpp
app/libraries/serial/json/: CMakeLists.txt
app/libraries/serial/yaml/: CMakeLists.txt
project/: CMakeLists.txt  archi.excalidraw  main.cpp  main_dynamic.cpp
project/Abstractions/core/dynamic/: CMakeLists.txt  DynamicCore.hpp  Makefile  cmake_install.cmake
project/Abstractions/engine/dynamicswitchengine/: DynamicSwitchEngine.hpp  Makefile  cmake_install.cmake
project/Abstractions/graphic/Raylib/: CMakeLists.txt  raylib.cpp
project/Abstractions/graphic/Sdl/: CMakeLists.txt
project/Interfaces/: InfoSharedLoader.hpp
project/Interfaces/core/: CMakeLists.txt  ICore.hpp
project/Interfaces/event/: Readme.md
project/Interfaces/graphic/: 3d.excalidraw  CMakeLists.txt  GraphicSharedLoader.hpp
project/Interfaces/graphic/audio/: IMusic.hpp  ISound.hpp
project/Interfaces/graphic/event/: IEvent.hpp  IKeyboard.hpp  IMouse.hpp
project/Interfaces/graphic/graphic/: IModel.hpp  IPolygon.hpp  ISprite.hpp  IText.hpp  Quaternion.hpp
project/Interfaces/graphic/window/: ICamera.hpp  IWindow.hpp
project/Interfaces/graphic3/: CMakeLists.txt
project/Interfaces/graphic3/event/: IEvent.hpp  IKeyboard.hpp
project/Interfaces/graphic3/graphic/: IModel.hpp  ISprite.hpp
project/Interfaces/graphic3/window/: ICamera.hpp
project/Interfaces/physics/: matrix.hpp  quaternion.hpp
project/Interfaces/serial/: CMakeLists.txt  ISerial.hpp  SerialSharedLoader.hpp
project/Interfaces/system/: CMakeLists.txt  Type.hpp  math.hpp
project/Libraries/: Clock.hpp  DynamicLoader.hpp
project/Libraries/Core/: Readme.md
project/Libraries/Core/Template/: TypeCore.hpp
project/Libraries/DynamicCore/: DynamicCore.hpp
project/Libraries/DynamicSwitchCore/: CMakeLists.txt  DynamicSwitchCore.hpp
project/Libraries/ECS/: Component.hpp  ComponentConfig.hpp  ComponentExtractor.hpp  Registry.hpp
project/Libraries/Raylib3/: CMakeLists.txt  raylib.cpp
project/Libraries/Raylib3/event/: RayEvent.hpp  RayKeyboard.hpp  RayMouse.hpp
project/Libraries/Raylib3/graphic/: RaySprite.hpp
project/Libraries/Raylib3/window/: RayCamera.hpp
project/Libraries/Sdl3/: CMakeLists.txt
project/Libraries/Sdl3/event/: SdlEvent.hpp  SdlKeyboard.hpp  SdlMouse.hpp
project/Libraries/Sdl3/graphic/: SdlPolygon.hpp  SdlSprite.hpp
project/Libraries/Sdl3/window/: SdlWindow.hpp
project/Libraries/Sfml3/: sfml.cpp
project/Libraries/Sfml3/event/: SfmlKeyboard.hpp
project/Libraries/Sfml3/graphic/: SfmlModel.hpp  SfmlPolygon.hpp  SfmlSprite.hpp
project/Libraries/core/dynamic/: DynamicCore.hpp
project/Libraries/core/static/: Readme.md
project/Libraries/engine/dynamicengine/: CMakeLists.txt  DynamicEngine.hpp
project/Libraries/engine/dynamicswitchengine/: CMakeLists.txt  DynamicSwitchEngine.hpp
project/Libraries/graphic/Sdl/: sdl.cpp
project/Libraries/graphic/Sfml/: sfml.cpp
project/includes/: Component.hpp  Systems.hpp
project/libraries/finder/: DynamicLoader.hpp  FileSearcher.hpp  FlagParser.hpp
project/libraries/maths/: CMakeLists.txt  geometry.hpp  interpolation.hpp
project/libraries/system/: type.hpp
project/modules/core/: CMakeLists.txt
project/modules/core/cbd/: Readme.md
project/modules/core/dynamic/: CMakeLists.txt  DynamicCore.hpp
project/modules/core/ecs/: Component.md  Ecs.hpp  Entity.hpp  Entity_impl.hpp  Readme.md  Registry.cpp  Registry.hpp  Registry_impl.hpp  SparseArray.hpp  System.hpp  Systems.md
project/modules/core/ent/: Ecs.hpp  ProjectComponentManager.hpp  ProjectManager.hpp
project/modules/game/snake/: CMakeLists.txt  Snake.hpp  snake.cpp
project/modules/graphic/raylib/: CMakeLists.txt  raylib.cpp
project/modules/graphic/sdl/: CMakeLists.txt  sdl.cpp
project/modules/graphic/sfml/: CMakeLists.txt  sfml.cpp
project/modules/serial/json/: CMakeLists.txt  json.cpp
project/modules/serial/yaml/: CMakeLists.txt  YamlSerial.hpp  yaml.cpp
project/shared/: libraylibgraphic.dylib  libsdlgraphic.dylib  libsfmlgraphic.dylib
project/shared/graphic/sdl/: Readme.md  (+2 more)
project/sources/: EngineCore.hpp  _DynamicSwitchEngine.hpp  _FirstGameCore.hpp
project/sources/cyclone/: environement.hpp  group.hpp  physics.hpp  rigidbody.hpp  types.hpp  world.hpp
project/static/ecs/: CMakeLists.txt  Ecs.hpp  Registry.hpp
project/static/finder/: CMakeLists.txt  DynamicLoader.hpp
project/static/maths/: geometry.hpp
project/static/system/: std.hpp
sources/Compilation/OpenGL/: CMakeLists.txt  Main.cpp
sources/Compilation/Sdl/: CMakeLists.txt  Main.cpp
sources/Compilation/Sdl2/: CMakeLists.txt  Main.cpp
sources/Compilation/Step 3 - Adding a Version Number And Configured Header File/: CMakeLists.txt  cxx_standard_v20.cpp
sources/Compilation/dynamic/: CMakeLists.txt  Dynamic.hpp  Main.cpp  Static.hpp  app
sources/Project/: CMakeLists.txt  _main.cpp  a  az  main-copy.cpp  main.cpp  main_dynamic.cpp  main_raylib.cpp  main_sdl2.cpp  run.sh
sources/Project/Core/: Core.hpp
sources/Project/Libraries/: Core.hpp  DynamicLoader.hpp  FileSearcher.hpp  FlagParser.hpp
sources/Project/Raylib/: raylib.cpp
sources/Project/Sfml/: CMakeLists.txt  sfml.cpp
test/3D/: CMakeLists.txt  Camera.hpp  Matrice.hpp  Object.hpp  Quaternion.hpp  Trigo.hpp  Vector3f.hpp  main.cpp
test/Compilation/Fltk/: CMakeLists.txt  Main.cpp
test/Compilation/OpenGL/: CMakeLists.txt  Main.cpp  Readme
test/Compilation/Raylib/: CMakeLists.txt  Main.cpp  Readme.md
test/Compilation/glut/: CMakeLists.txt  Main.cpp
test/ecs2/: CMakeLists.txt  ComponentManager.hpp  Entity.hpp  Registry.cpp  Registry.hpp  Registry_impl.hpp  SparseArray.hpp  System.hpp  main.cpp
test/sdl_ttf/: CMakeLists.txt  main.cpp
test/sdl_ttf/graphic/: CMakeLists.txt
test/sdl_ttf/sdlgraphic/: CMakeLists.txt  type.hpp
test/sdl_ttf/shared/: CMakeLists.txt  sharedsdl.cpp
test/tcp/: CMakeLists.txt  client.cpp  server.cpp
test/tcp/findlib/: FindAsio.cmake
test/yaml-parser/: CMakeLists.txt  CMakeLists.txt.test  Cmake.cpp  Makefile  app  config.yaml  main.cpp
(+3184 files in other folders)
